--- a/firebase.json
+++ b/firebase.json
@@ -17,5 +17,20 @@
   },
   "firestore": {
     "rules": "firestore.rules"
+  },
+  "hosting": {
+    "public": ".",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**",
+      "functions/**"
+    ],
+    "rewrites": [
+      {
+        "source": "/perfil/**",
+        "destination": "/perfil.html"
+      }
+    ]
   }
 }
